# axon

./: .gitignore  pyproject.toml
axon/: __init__.py  backend.py  context.py  dtype.py  ops.py  primitives.py  random.py  tensor.py  transforms.py  tree_utils.py  utils.py
axon/benchmarks/: feedforward.py  resnet.py  resnet_model.py
axon/nn/: __init__.py  activations.py  base.py  dropout.py  functional.py  linear.py  loss.py  normalization.py
benchmarks/: benchmarker.py  feedforward.py  llm_ctx_bench.py  llm_prompt_bench.py  mistral.py  resnet.py  tch_feedforward.py  tch_resnet.py
examples/: dag.py  nn.py  numpy_backend.py  perceptron.py  tutorial.py
tests/: test_broadcasting.py
