[tool.poetry]
name = "axon"
version = "0.1.0"
description = ""
authors = ["Arpan Dhatt <ary.dhatt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
numpy = "^1.26.4"
scipy = "^1.13.0"
mlx = "^0.11.0"
torch = "^2.2.2"
torchvision = "^0.17.2"
sentencepiece = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


